# codebase_to_markdown

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
project_to_markdown/: __init__.py  main.py  markdown_to_project.py  project_to_markdown.py
project_to_markdown.egg-info/: PKG-INFO  SOURCES.txt
tests/: conftest.py  test_project_to_markdown_collection.py  test_project_to_markdown_helpers.py
