[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-to-markdown"
version = "0.1.9"
description = "Export a Python project into a single Markdown file."
authors = [{name = "Benaya Trabelsi", email = "benaya7@email.com"}]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.scripts]
project-to-markdown = "project_to_markdown.project_to_markdown:main"
markdown-to-project = "project_to_markdown.markdown_to_project:main"

[project.urls]
Homepage = "https://github.com/benayat/codebase_to_markdown"
"Bug Tracker" = "https://github.com/benayat/codebase_to_markdown/issues"